# fava-envelope

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  setup.py
docs/: requirements.txt
fava_envelope/: __init__.py
fava_envelope/modules/: beancount_envelope.py  main.py
src/fava_envelope/: __init__.py
src/fava_envelope/modules/: beancount_envelope.py  budget_tree.py
src/fava_envelope/templates/: EnvelopeBudget.html
