[tool.poetry]
name = "fava-envelope"
version = "0.1.0"
description = ""
authors = ["Brian Ryall <brian+envelope@brianryall.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fava = "^1.14"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
jedi = "^0.17.0"
setuptools = "^46.1.3"
wheel = "^0.34.2"
twine = "^3.1.1"
black = "^20.8b1"
pylint = "^2.7.2"
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 90
target-version = ['py37','py38']
include = '\.py$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.github
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = ["docs"]
