[tool.poetry]
name = "fava-envelope"
version = "0.5.1"
description = "Fava Envelope budgeting for beancount"
authors = ["Brian Ryall <bryall@users.noreply.github.com>"]
homepage = 'https://github.com/bryall/fava-envelope'
keywords = [
    "fava",
    "beancount",
    "budgeting",
    "accounting"
]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Financial and Insurance Industry',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Office/Business :: Financial :: Accounting'
]
license = "MIT"
packages = [
    { include = "fava_envelope" }
]

[tool.poetry.dependencies]
python = "^3.8"
fava = "^1.14"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
twine = "^3.1.1"
black = "^20.8b1"
pylint = "^2.7.2"
flake8 = "^3.8.4"
pre-commit = "^2.10.1"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 90
target-version = ['py37','py38']
include = '\.py$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.github
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = ["docs"]
